--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
@@ -14,8 +15,12 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
+
   },
   "devDependencies": {
-    "prisma": "^5.20.0"
+
+    "prisma": "^5.20.0",
+    "nodemon": "^3.1.7"
+
   }
 }
