--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "identicon": "^3.1.1",
     "jade": "~1.11.0",
+    "jdenticon": "^3.3.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
-
   },
   "devDependencies": {
-
-    "prisma": "^5.20.0",
-    "nodemon": "^3.1.7"
-
+    "nodemon": "^3.1.7",
+    "prisma": "^5.20.0"
   }
 }
