--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "identicon": "^3.1.1",
     "jade": "~1.11.0",
     "jdenticon": "^3.3.0",
+    "js-image-generator": "^1.0.4",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
   },
