--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "devDependencies": {
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0"
-  }
+  },
+  "description": "",
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
