--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "express": "~4.18.2",
+    "http-errors": "^2.0.0" ,
     "identicon": "^3.1.1",
-    "jade": "~1.11.0",
+    "jade": "^1.11.0", 
     "jdenticon": "^3.3.0",
     "js-image-generator": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
